# harmony-explorer

./: .env  .gitignore  Cargo.toml  LICENSE.md  README.md
migrations/2019-10-26-214811_create_initial_tables/: down.sql  up.sql
src/: chord_library.rs  database.rs  lib.rs  main.rs  music_theory.rs  parser.rs  schema.rs  sequencer.rs
