[package]
name = "guitar-tool"
version = "0.1.0"
authors = ["Alexandru Tiniuc <tiniuc.alexandru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For music theory
num = "0.2.0"
pitch_calc = "0.11.1"
enum-primitive-derive = "0.1.2"
num-traits ="0.2.8"
# REPL library
rustyline = "5.0.3"
# Audio stuff
sampler = "0.2.0"
find_folder = "0.3.0"
portaudio = "0.7.0"
sample = "0.10.0"
