[package]
name = "harmony-explorer"
version = "0.1.0"
authors = ["Alexandru Tiniuc <tiniuc.alexandru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Music Theory
num = "0.2.0"
num-traits ="0.2.8"
pitch_calc = "0.11.1"
enum-primitive-derive = "0.1.2"
diesel = {version = "1.4.3", features = ["sqlite"]}
diesel_migrations = "1.4.0"
# REPL
rustyline = "5.0.3"
nom = "5.0.1"
# Audio 
sampler = "0.2.0"
find_folder = "0.3.0"
portaudio = "0.7.0"
sample = "0.10.0"
gag = "0.1.10"
