[package]
name = "harmony_explorer"
version = "0.1.0"
authors = ["Alexandru Tiniuc <tiniuc.alexandru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Music Theory
num = "0.4.0"
num-traits ="0.2.8"
lexical-core = "0.7.6"
pitch_calc = "0.12.0"
enum-primitive-derive = "0.2.1"
libsqlite3-sys = { version = ">=0.8.0, <0.13.0", features = ["bundled"] }
diesel = {version = "1.4.3", features = ["sqlite"]}
diesel_migrations = "1.4.0"
# REPL
rustyline = "5.0.3"
nom = "6.0.0"
# Audio 
# sampler = "0.2.0"
find_folder = "0.3.0"
portaudio = "0.7.0"
dasp = "0.11.0"

[lib]